#==============================================================
#
#  Name: RELEASE_NOTES
#
#  Rem:  This files describes release notes for
#        the general Oscilloscope IOC Application, using
#        scope-asyn module based on Zen's general scope support.
#
#==============================================================

R1.2.7  13-Jun-2024  M. Dunning (mdunning)
        ASTA: Add new scope IOC sioc-as01-sc01

R1.2.6  10-Jun-2024  M. Dunning (mdunning)
        FACET: Add new scope IOC sioc-li20-sc01 for MDO loss fiber scope

R1.2.5  30-Apr-2024 S. Alverson (alverson)
        LCLS: Replace Rigol with new Tex MDO for LHTR timing

R1.2.4  12-Oct-2023 G. Brown (gwbrown)
        DEV: Modify B15 to use SCOP-AMRF-RF01-LCLSDEV

R1.2.3  10-Oct-2023  M. Dunning (mdunning)
        TESTFAC: Add dev IOC sioc-b128-sc01

R1.2.2  20-Jun-2023  M. Dunning (mdunning)
        LCLS: Move HOM scopes from sioc-sys0-sc01 to new IOC sioc-sys0-sc02; scopes are now Tek MDO34

R1.2.1      20-Jun-2023  M. Dunning (mdunning)
            LCLS: Fix node names in sioc-sys0-sc01
            LCLS: Use rhel7 binary in startup script shebangs
            All: Clean up startup scripts and db files 

R1.2.0      08-Jun-2023  M. Dunning (mdunning)
            All: Upgrade to scope-asyn R1.5.0
                 Add support for MDO34 scope; add dev IOC sioc-b34-sc02
                 Merge binaries; scope module is fixed
                 Clean up src/Makefile

R1.1.2      15-May-2023, S. Alverson (alverson):
            LCLS: Adding scop-lgun-ls03 in S0 Laser Room (sioc-lgun-sc01)

R1.1.1      07-Feb-2023, K. Luchini  (luchini):
            COMMON: remove unused variables from CONFIG_STE
            LINUX_KERNEL_MODULES and LINUXRT_BUILDROOT_VERSION=

R1.1.0      S. Alverson (alverson):
            All: Added Rigol scope support, required separating out binaries per device type (tds, ds1, ds6)
                 C code support should be cleaned up so that this is not necessary
