@@ -8,6 +8,9 @@
 #
 #==============================================================
 
+R1.2.8  23-Jul-2024  M. Dunning (mdunning)
+        Dev: Add new IOC sioc-b34-sc04
+
 R1.2.7  13-Jun-2024  M. Dunning (mdunning)
         ASTA: Add new scope IOC sioc-as01-sc01
 
